Summary of changes for version 2.1:
----------------------------------

  * It is now possible to declare static variables that retain their
    values across function calls.  For example,

      function ncall = f () static n = 0; ncall = ++n; endfunction

    defines a function that returns the number of times that it has
    been called.

  * Functions like quad, fsolve, and lsode can take either a function
    name or a simple function body as a string.  For example,

      quad ("sqrt (x)", 0, 1)

    is equivalent to

      function y = f (x) y = sqrt (x); endfunction
      quad ("f", 0, 1)

  * If the argument to eig() is symmetric, Octave uses the specialized
    Lapack subroutine for symmetric matrices for a significant
    increase in performance.

  * Octave now has a logical data type.  A true value is represented
    by 1, and false value by 0.  Comparison operations like <, <=, ==,
    >, >=, and != now return logical values.  Indexing operations that
    use zero-one style indexing must now use logical values.  You can
    use the new function logical() to convert a numeric value to a
    logical value.  This avoids the need for the built-in variable
    prefer_zero_one_indexing, so it has been removed.  Logical values
    are automatically converted to numeric values where appropriate.

  * If the argument to lsode that names the user-supplied function is
    a 2-element string array, the second element is taken as the name
    of the Jacobian function.  The named function should have the
    following form:

      JAC = f (X, T)

    where JAC is the Jacobian matrix of partial derivatives of the
    right-hand-side functions that define the set of differential
    equations with respect to the state vector X.

Summary of changes for version 2.0.5:
------------------------------------

  * A `switch' statement is now available.  See the Statements chapter
    in the manual for details.
